--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:padding="5dp"
                 app:srcCompat="@mipmap/ic_launcher" />
 
 
